samples/_failures_safe/1761140831_5114e3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_63c086a8.c: In function ‘sort_entries_by_severity’:
./samples/SAFE/__tmp_63c086a8.c:136:5: error: expected expression at end of input
  136 |     if (count <=
      |     ^~
./samples/SAFE/__tmp_63c086a8.c:136:5: error: expected declaration or statement at end of input
